# kinetic-eye

./: .gitignore  CMakeLists.txt  readme.md
include/: config.h.in  utils.hpp
include/k2c/logging/: log.hpp
src/: main.cpp
src/k2c/logging/: CMakeLists.txt  log.cpp
